--- a/gs.css
+++ b/gs.css
@@ -1,16 +1,36 @@
 p.speech {
- font-family: Verdana; font-size:medium; color: black;
+ font-family:Verdana, Geneva, Tahoma, sans-serif; font-size:medium; color: black;
 }
 p.direction {
-    font-family: Cambria, Cochin, Georgia; font-size: small; 
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: small; 
     color:black; background-color: azure;
 }
 p.direction:hover {
-    color:red; background-color: yellow
+    color:red; background-color: yellow;
 }
 h5.Judge {
-    color:blueviolet; font-family:'Gill Sans'; font-size: medium;
+    color:blueviolet; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+    font-size: medium;
 }
 h5.Imp {
-    color:green; font-family:Arial; font-size:medium
+    color:green; font-family:Arial, Helvetica, sans-serif; font-size:medium;
+}
+
+table {
+    border : 2px solid dodgerblue; border-collapse: separate;
+    margin: 30px;padding: 1px;
+} 
+
+th {
+    border : 1px solid dodgerblue; color:deeppink; text-align: center;
+    padding: 5px;
+} 
+
+td {
+    border : 1px dashed dodgerblue; color: green; text-align: left;
+    padding: 5px;
+}
+
+tr:nth-child(odd) {
+    background-color: lightgoldenrodyellow;
 }
